--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 
+/* @import 'demon slayer\my-react-app\src\assets\fonts.css'; */
 @import "tailwindcss";
 html,body{
   width: 100%;
   height: 100%;
   /* font-family: Helvetica; */
 }
+
 @font-face {
   font-family: 'Bangers';
   src: url('./assets/Bangers-Regular.ttf') format('truetype');
